# pytest-bigquery-mock

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
pytest_bigquery_mock/: __init__.py  plugin.py
tests/: conftest.py  test_plugin.py
