[metadata]
name = pytest-bigquery-mock
python_requires = >=3.6
version = 0.1.2
author = Petri-Johan Last
author_email = petri.last@gmail.com
url = https://github.com/pjlast/pytest-bigquery-mock
download_url = https://github.com/pjlast/pytest-bigquery-mock/archive/refs/tags/0.1.1.tar.gz
description = Provides a mock fixture for python bigquery client
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pytest>=5.0
    pytest-mock>=3.6


[options.entry_points]
pytest11 =
    pytest_bigquery_mock = pytest_bigquery_mock
